--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper blue">
     <a href="#" class="brand-logo left"><img class="responsive-img poke-logo" src="../assets/images/logo.png"/></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="#">Play</a></li>
@@ -12,8 +12,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container center">
   <h2 class="mytitle">
-    Welcome to {{ title }}!
+    Welcome to:
   </h2>
+  <img class="responsive-img custom-title-img" src="../assets/images/coollogo_com-37791207.png"/>
 </div>
 
 <router-outlet></router-outlet>
