--- a/Front/src/styles.css
+++ b/Front/src/styles.css
@@ -1,3 +1,14 @@
 html, body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #90caf9;
+}
+
+.custom-input {
+    padding: 5px;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.custom-button {
+    margin-top: 14px;
 }
