--- a/Front/src/styles.css
+++ b/Front/src/styles.css
@@ -1,6 +1,7 @@
 html, body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #90caf9;
+    padding-bottom: 50px;
 }
 
 .custom-input {
@@ -11,4 +12,5 @@ html, body {
 
 .custom-button {
     margin-top: 14px;
+    border-radius: 20px;
 }
